--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <h1>Infinite Scroll With Pure Javascript!</h1>
+    <div class="container">
+        
+    </div>
     <!-- add javascript here! -->
     <script src="./app.js"></script>
 </body>
