Html Part completed now styling Css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 <body>
     <div class="container">
         <h1>Infinite Scroll With Pure Javascript!</h1>
-    
+        <div class="posts">
+            <p class="post_id">i</p>
+            <h2 class="title">Api Call Here</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque tempore, qui
+                nam neque accusantium eaque fugiat distinctio sapiente maiores perferendis! Deserunt laboriosam, rerum
+                vero sunt porro voluptatum incidunt animi?</p>
+        </div>
+        <div class="posts">
+            <p class="post_id">i</p>
+            <h2 class="title">Api Call Here</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque tempore, qui
+                nam neque accusantium eaque fugiat distinctio sapiente maiores perferendis! Deserunt laboriosam, rerum
+                vero sunt porro voluptatum incidunt animi?</p>
+        </div>
     </div>
     <!-- add javascript here! -->
     <script src="./app.js"></script>
