--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="container">
         <h1>Infinite Scroll With Pure Javascript!</h1>
         <div class="posts">
-            <p class="post_id">i</p>
+            <p class="post_id">1</p>
             <h2 class="title">Api Call Here</h2>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque tempore, qui
                 nam neque accusantium eaque fugiat distinctio sapiente maiores perferendis! Deserunt laboriosam, rerum
                 vero sunt porro voluptatum incidunt animi?</p>
         </div>
         <div class="posts">
-            <p class="post_id">i</p>
+            <p class="post_id">1</p>
             <h2 class="title">Api Call Here</h2>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cumque tempore, qui
                 nam neque accusantium eaque fugiat distinctio sapiente maiores perferendis! Deserunt laboriosam, rerum
