--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h1>Infinite Scroll With Pure Javascript!</h1>
+        <p class="check">Loading...</p>
     </div>
     <!-- add javascript here! -->
     <script src="./app.js"></script>
