--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container">
         <h1>Infinite Scroll With Pure Javascript!</h1>
     </div>
-    <p class="check">Loading...</p>
+    <div>
+        <button id="loadmore">Load More</button>
+    </div>
     <!-- add javascript here! -->
     <script src="./app.js"></script>
 </body>
