--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Infinite Scroll With Pure Javascript!</h1>
     </div>
-    <div>
+    <div class="btn_container">
         <button id="loadmore">Load More</button>
     </div>
     <!-- add javascript here! -->
